# Forth

./: CMakeLists.txt  README.md  codespace.md
.github/workflows/: cmake.yml
tokenModule/: CMakeLists.txt  dictionary.c  dictionary.h  main.c  process-tokens.c  process-tokens.h  push-tokens.c  push-tokens.h  push-tokens.hh  stack.c  stack.h  stack_tests.cc  token.c  token.h  token.hh
